--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mysql2": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "reactstrap": "^9.2.0",
